WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294121
[Safe CPP] Address warnings in RenderBox.h
https://bugs.webkit.org/show_bug.cgi?id=294121
Summary
[Safe CPP] Address warnings in RenderBox.h
Brandon
Reported
2025-06-06 07:01:10 PDT
Address safe cpp warnings in RenderBox.h.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-06 07:01:19 PDT
<
rdar://problem/152716628
>
Brandon
Comment 2
2025-06-06 07:02:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46422
EWS
Comment 3
2025-06-06 09:55:35 PDT
Committed
295922@main
(4c5c020754a7): <
https://commits.webkit.org/295922@main
> Reviewed commits have been landed. Closing PR #46422 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug