[Safe CPP] Address warnings in RenderBox.h https://bugs.webkit.org/show_bug.cgi?id=294121 rdar://problem/152716628

Reviewed by Chris Dumez.

Address safe cpp warnings in RenderBox.h.

* Source/WebCore/SaferCPPExpectations/UncheckedLocalVarsCheckerExpectations:
* Source/WebCore/rendering/RenderBox.h:
(WebCore::RenderBox::firstChildBox const):
(WebCore::RenderBox::lastChildBox const):
(WebCore::RenderBox::previousSiblingBox const):
(WebCore::RenderBox::previousInFlowSiblingBox const):
(WebCore::RenderBox::nextSiblingBox const):
(WebCore::RenderBox::nextInFlowSiblingBox const):

Canonical link: https://commits.webkit.org/295922@main